--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 //font
-$FONT_FAMILY: "Pretendard", sans-serif !default;
+$FONT_FAMILY: 맑은 고딕, malgun gothic, -apple-system, Apple SD 산돌고딕 Neo, AppleGothicNeoSD, Microsoft NeoGothic,  Droid sans, sans-serif !default;
 $FONT_SIZE: 16px !default;
 $BODY_COLOR: #000 !default;
 $LINK_COLOR: $BODY_COLOR !default;
