--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -11,15 +11,16 @@ body{height: 100%; min-width: 1600px;}
 body{
   background: #fff;
   color: $BODY_COLOR;
-  font-family: 맑은 고딕, malgun gothic, AppleGothicNeoSD, Apple SD 산돌고딕 Neo, Microsoft NeoGothic,  Droid sans, sans-serif;
+  font-family: $FONT_FAMILY;
   font-size: $FONT_SIZE;
+  -webkit-text-size-adjust:none;
 }
 @media screen and (max-width: 992px){
-  html, body{ 
-    min-width: 100%; 
+  html, body{
+    min-width: 100%;
     font-size: 16px;
   }
-  
+
 }
 h1, h2, h3, h4, h5, h6{
   margin: 0;font-weight: 400;line-height: 1.2;
